Blender 2.8 viewport render black frame #65177

Closed
opened 2019-05-27 10:03:02 +02:00 by Igor Ermakov · 12 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: (optional)

Short description of error
when rendering the viewport on the result black frame
image.png

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.34 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: (optional) **Short description of error** when rendering the viewport on the result black frame ![image.png](https://archive.blender.org/developer/F7071694/image.png) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Ygrek

Added subscriber: @Ygrek
Author

Removed subscriber: @Ygrek

Removed subscriber: @Ygrek
Author

Added subscriber: @Ygrek

Added subscriber: @Ygrek
Igor Ermakov changed title from black frame to Blender 2.8 viewport render black frame 2019-05-27 10:14:54 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like an off-by-one error..

Looks like an off-by-one error..
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Don't really know where this is happening. What I can say is that the back line exists already after the buffer is read in GPU_offscreen_read_pixels.
Also it happens only when overlays are turned on and when rendering from camera view.

So I guess it is maybe the frame of the camera itself?

Don't really know where this is happening. What I can say is that the back line exists already after the buffer is read in `GPU_offscreen_read_pixels`. Also it happens only when overlays are turned on and when rendering from camera view. So I guess it is maybe the frame of the camera itself?

yes looks like the camera frame. Maybe a simple exclusion of them when in camera view + image render would do it.

yes looks like the camera frame. Maybe a simple exclusion of them when in camera view + image render would do it.
Author

If you remove the visibility of the camera, the render is good. There is no such thing in 2.79
image.png
image.png

If you remove the visibility of the camera, the render is good. There is no such thing in 2.79 ![image.png](https://archive.blender.org/developer/F7071968/image.png) ![image.png](https://archive.blender.org/developer/F7071974/image.png)
Author

image.png

![image.png](https://archive.blender.org/developer/F7071993/image.png)

This issue was referenced by f3fb7c5f22

This issue was referenced by f3fb7c5f22cf33e6cfe1392387e187ecb5cb7699
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65177
No description provided.