Fix T65177: Camera frame visible in viewport render